--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -154,6 +154,14 @@ button:hover {
     margin: 0;
 }
 
+.line-half {
+    width: 100%;
+    height: 0.5px;
+    background-color: grey;
+    margin-bottom: 50px;
+    margin: 0;
+}
+
 .about-content {
     flex: 1;
     display: flex;
@@ -254,59 +262,94 @@ button:hover {
 
 .tabs {
     font-family: 'Montserrat', sans-serif;
-}
-.tab {
-    border-bottom: 1px solid #ddd;
-    padding: 20px;
-  }
-
-  .tab-header {
+    padding: 0 10px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-  }
+    flex-direction: column;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
 
-  .tab-header h2 {
-    margin: 0;
-    font-size: 20px;
-    font-weight: bold;
-  }
 
-  .tab-header span {
-    font-size: 16px;
-    color: #555;
-  }
 
-  .tab-content {
-    display: none;
-    padding: 20px 0;
-    animation: fadeIn 0.3s ease-in-out;
-  }
+.tab {
+    display: grid;
+    
+    grid-template-columns: 1fr 2fr;
+    padding: 40px;
+    margin-bottom: 100px;
+    margin-top: 90px;
+}
 
-  .tab-content p {
-    margin: 10px 0;
-  }
+.tab-content {
+    position: absolute;
+    display: flex;
+    gap: 20vw;
+    font-size: 0.9em;
 
-  .tab-content img {
-    max-width: 100%;
-    border-radius: 8px;
-  }
+}
 
-  .tab-header.active .arrow {
-    transform: rotate(90deg);
-  }
+.tab-left {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
 
-  .arrow {
-    transition: transform 0.3s;
-  }
+.tab-number {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
+    color: #666;
+    display: block;
+    margin-bottom: 10px;
+}
 
-  @keyframes fadeIn {
-    from {
+.tab-left h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    font-weight: 500;
+    margin-left: 20px;
+    color: black;
+    white-space: nowrap; /* Prevents text from wrapping */
+}
+
+.tab-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width: 600px;
+    margin-left: auto;
+}
+
+.tab-right p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.learn-more {
+    margin-top: 10px;
+    align-self: flex-start;
+    color: black;
+    text-decoration: underline;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+}
+
+.tab-image {
+    width: 100%;
+    display: block;
+    margin-top: 20px;
+    opacity: 0;
+  }
+  
+  @keyframes rollIn {
+    0% {
+      transform: translateY(-100%);
       opacity: 0;
     }
-    to {
+    100% {
+      transform: translateY(0);
       opacity: 1;
     }
   }
-
