--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -23,7 +27,12 @@ header {
 .links {
     display: flex;
     justify-content: space-between;
-    width: 45%;
+    width: 50%;
+}
+
+.links a {
+  text-underline-offset: 5px;
+  cursor: pointer;
 }
 
 #main {
@@ -33,7 +42,7 @@ header {
     background-image: url('../assets/main.jpg');
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 110vh;
 }
 
 #main::before {
@@ -61,12 +70,13 @@ button {
     color: white;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: background-color 0.4s, color 0.4s;
 }
 
 button:hover {
-    background: white;
-    color: black;
+    background: rgb(0, 102, 178);
+    color: white;
+    border: 2px solid rgb(0, 101, 178);
 }
 
 .hero-content {
@@ -76,7 +86,7 @@ button:hover {
     justify-content: center;
     padding: 0 100px;
     color: white;
-    max-width: 800px;
+    max-width: 850px;
     padding-top: 150px;
 }
 
@@ -113,7 +123,8 @@ button:hover {
     color: #ccc;
     text-decoration: underline;
     text-decoration-thickness: 2px;
-    text-decoration-color: white;
+    text-decoration-color: #ccc;
+    transition: color 0.3s ease;
 }
 
 .actions {
@@ -121,6 +132,126 @@ button:hover {
     display: flex;
     gap: 20px;
 }
+
+
+#slova {
+    min-height: 20vh;
+    width: 100%;
+    background-color: rgb(55, 90, 152);
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.word-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  position: relative;
+}
+
+.word {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 150px;
+  font-weight: bold;
+  color: #ffffff;
+  white-space: nowrap;
+  position: relative;
+}
+
+.wordLeft {
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
+  opacity: 0.8;
+}
+
+.wordRight {
+  transform: translateX(0);
+  transition: transform 0.3s ease-out;
+  opacity: 0.8;
+}
+
+
+@media (max-width: 768px) {
+  .word {
+      font-size: 1.8rem;
+  }
+}
+
+
+#who {
+    min-height: 90vh;
+    width: 100%;
+    background-color: rgb(55, 90, 152);
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+
+.who-text p {
+    font-size: 50px;
+    text-align: center;
+    max-width: 70vw;
+    color: #888;
+}
+
+.who-title h1 {
+  font-size: 50px;
+  color: white;
+}
+
+.who-title {
+  margin-bottom: 70px;
+}
+
+
+.line-animation {
+  display: block;
+  position: relative;
+  background: linear-gradient(to right, white 50%, transparent 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+.line-animation.animate{
+  animation: textFill 2s ease forwards;
+}
+
+.line-animation.animate:nth-child(1) { animation-delay: 0.2s; }
+.line-animation.animate:nth-child(2) { animation-delay: 0.3s; }
+.line-animation.animate:nth-child(3) { animation-delay: 0.4s; }
+.line-animation.animate:nth-child(4) { animation-delay: 0.5s; }
+.line-animation.animate:nth-child(5) { animation-delay: 0.6s; }
+.line-animation.animate:nth-child(6) { animation-delay: 0.7s; }
+.line-animation.animate:nth-child(7) { animation-delay: 0.8s; }
+
+
+
+@keyframes textFill {
+  0% {
+      background-position: right bottom;
+      opacity: 0;
+      transform: translateY(20px);
+  }
+  100% {
+      background-position: left bottom;
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
 
 #about {
     min-height: 100vh;
@@ -307,7 +438,7 @@ button:hover {
   }
 
   .tab-image {
-    flex: 0 0 60%;
+    flex: 0 0 50%;
     transform: translateX(-20px);
     transition: all 0.5s ease;
   }
@@ -383,7 +514,7 @@ button:hover {
         "card1 card2 card3"
         ". card4 card5";
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 30px;
     margin-bottom: 20px;
 }
 
@@ -394,6 +525,14 @@ button:hover {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: left;
   width: 90%;
+  transition: transform 0.1s ease, box-shadow 0.1s ease;
+  will-change: transform;
+}
+
+
+.card:hover {
+  transform: scale(1.07) !important; 
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.30);
 }
 
 .card h2 {
@@ -456,11 +595,6 @@ button:hover {
   box-sizing: border-box;
   text-align: center;
   border-radius: 15px;
-  visibility: hidden;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  opacity: 0;
-
-  
 }
 
 
@@ -468,8 +602,6 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: flex-start;  
-  opacity: 1;
-  visibility: visible;
 }
 
 .expert-card .info-arrow {
@@ -533,6 +665,7 @@ body {
   padding: 0;
   background-color: #f9f9f9;
   color: #333;
+  overflow-x: hidden;
 }
 
 .container {
@@ -696,3 +829,28 @@ h1 {
     margin-bottom: 2rem;
   }
 }
+
+#back-to-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+  font-size: 18px;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;  /* Updated for smoother transition */
+  transform: translateY(0);
+}
+
+#back-to-top:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  transform: translateY(-3px);  /* Added hover animation */
+}
+
