--- a/styles/main.css
+++ b/styles/main.css
@@ -738,9 +738,9 @@ button:hover {
   flex: 1;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   flex-direction: row;
-  gap: 200px;
+  gap: 300px;
   padding: 0;
   margin-top: 50px;
   padding-left: 0;
@@ -757,7 +757,7 @@ button:hover {
 
 .shapes-container {
   display: flex;
-  justify-content: center;
+  justify-content:flex-start;
   gap: 80px;
   margin-top: 80px;
 }
@@ -798,7 +798,7 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 0 100px 100px 0;
+  border-radius: 0 100px 0 0;
   padding: 30px;
 }
 
@@ -812,7 +812,7 @@ button:hover {
   align-items: center;
   justify-content: center;
   padding: 30px;
-  border-radius: 0 300px 0 0;
+  border-radius: 0 100px 0 0;
 }
 
 .shape-3 {
@@ -824,6 +824,7 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 0 100px 0 0 ;
   padding: 30px;
 }
 
